# dump

./: .env.example  Cargo.toml  Dockerfile.engine  Justfile  LICENSE  Makefile  README.md  docker-compose.yml  hft-engine.service  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs  ws_client.rs
apps/terminal/src/ui/: mod.rs
config/: engine.toml  prometheus.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: binance.rs  hyperliquid.rs  ibkr.rs  lib.rs  rate_limiter.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  metrics.rs  security.rs
crates/engine/: Cargo.toml
crates/engine/src/: inference.rs  lib.rs  main.rs  rl_agent.rs  router.rs  s3_writer.rs  ws_server.rs
crates/features/: Cargo.toml
crates/features/src/: gpu.rs  gpu_compute.rs  lib.rs
crates/universe/: Cargo.toml
crates/universe/src/: data_sources.rs  lib.rs  scoring.rs
models/: README.md
