[package]
name = "terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "terminal"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }

eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

chrono.workspace = true
