[package]
name = "adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
ordered-float.workspace = true
