[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
ordered-float.workspace = true
keyring.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
