[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
adapters = { path = "../adapters" }
features = { path = "../features" }
universe = { path = "../universe" }

tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
hdrhistogram.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true

ndarray.workspace = true
ort.workspace = true

parquet.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sns.workspace = true

parking_lot.workspace = true
dashmap.workspace = true
chrono.workspace = true
config.workspace = true
toml.workspace = true
