[package]
name = "universe"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tracing.workspace = true
parking_lot.workspace = true
metrics.workspace = true
